Updated logic to properly process dns server list

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,26 +10,23 @@
         Authorization: "{{ prism_api_auth }}"
       return_content: yes
     register: prism_dns_current_config
-    when:
-      - item not in prism_dns_current_config
 
-  - name: Remove configured DNS servers not in desired configuration
+  - name: Remove configured DNS server if not provided
     uri:
       url: "{{ prism_api_v2 }}/cluster/name_servers/{{ item }}"
       method: DELETE
       validate_certs: "{{ validate_certs }}"
-      body_format: json
       headers:
         Authorization: "{{ prism_api_auth }}"
       return_content: yes
       status_code: 204
-    when: item not in prism_dns_server_list
-    changed_when: true
+    when:
+      - item in prism_dns_current_config.json
+      - item not in prism_dns_server_list
     register: prism_dns_remove_missing_entry
-    ignore_errors: true
-    with_items: "{{ prism_dns_current_config }}"
+    loop: "{{ prism_dns_current_config.json }}"
 
-  - name: Set DNS server addresses
+  - name: Set DNS server
     uri:
       url: "{{ prism_api_v2 }}/cluster/name_servers"
       method: POST
@@ -41,8 +38,6 @@
         Authorization: "{{ prism_api_auth }}"
       return_content: yes
       status_code: 200,201
-    with_items: "{{ prism_dns_server_list }}"
-    changed_when: true
     register: prism_dns_update
-    ignore_errors: true
-    when: item not in prism_dns_current_config
+    loop: "{{ prism_dns_server_list }}"
+    when: item not in prism_dns_current_config.json
