--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,8 +1,8 @@
----
+# ---
 - hosts: localhost
   gather_facts: false
   roles:
-    - role: grdavies.nutanix_role_prism_init_api
+    # - role: grdavies.nutanix_role_prism_init_api
     - role: ../..
   vars:
     prism_ip: 10.38.185.37
