--- a/tests/test.yml
+++ b/tests/test.yml
@@ -4,9 +4,9 @@
   roles:
     - role: ../..
   vars:
-    prism_ip: 10.38.185.37
-    prism_username: admin
-    prism_password: nx2Tech165!
+    nutanix_host: 10.38.185.37
+    nutanix_password: admin
+    nutanix_username: nx2Tech165!
     prism_dns_server_list:
       - 8.8.8.8
       - 8.8.4.4
