--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,43 +1,7 @@
 ---
-# tasks file for nutanix_role_prism_dns
-  - name: Get current DNS configuration
-    uri:
-      url: "{{ prism_api_v2 }}/cluster/name_servers"
-      method: GET
-      validate_certs: "{{ validate_certs }}"
-      body_format: json
-      headers:
-        Authorization: "{{ prism_api_auth }}"
-      return_content: yes
-    register: prism_dns_current_config
+# tasks file for nutanix_role_nutanix_dns
+  - import_tasks: dns.yml
 
-  - name: Remove configured DNS server if not provided
-    uri:
-      url: "{{ prism_api_v2 }}/cluster/name_servers/{{ item }}"
-      method: DELETE
-      validate_certs: "{{ validate_certs }}"
-      headers:
-        Authorization: "{{ prism_api_auth }}"
-      return_content: yes
-      status_code: 204
+  - include_tasks: debug.yml
     when:
-      - item in prism_dns_current_config.json
-      - item not in prism_dns_server_list
-    register: prism_dns_remove_missing_entry
-    loop: "{{ prism_dns_current_config.json }}"
-
-  - name: Set DNS server
-    uri:
-      url: "{{ prism_api_v2 }}/cluster/name_servers"
-      method: POST
-      validate_certs: "{{ validate_certs }}"
-      body:
-        value: "{{ item }}"
-      body_format: json
-      headers:
-        Authorization: "{{ prism_api_auth }}"
-      return_content: yes
-      status_code: 200,201
-    register: prism_dns_update
-    loop: "{{ prism_dns_server_list }}"
-    when: item not in prism_dns_current_config.json
+      - nutanix_debug
