--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,9 @@
 ---
 # defaults file for nutanix_role_nutanix_dns
-  nutanix_dns_server_list: []
-  validate_certs: no
+nutanix_host: ""
+nutanix_username: ""
+nutanix_password: ""
+nutanix_port: 9440
+validate_certs: no
+nutanix_debug: False
+nutanix_dns_server_list: []
